--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "alembic>=1.14.0",
     "pendulum>=3.1.0",
     "langchain-core>=1.2.7",
-    "lazyllm>=0.7.3",
+    # lazyllm removed - only needed for lazyllm_backend, we use openai_sdk
 ]
 
 [build-system]
